--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -14,6 +14,9 @@
         <array key="Gaegu-Regular.ttf">
             <string>Gaegu-Regular</string>
         </array>
+        <array key="TimesNewRoman.ttf">
+            <string>.SFUI-Regular</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Account Details PopupVC-->
@@ -1883,21 +1886,15 @@
                                 <rect key="frame" x="144" y="60" width="608" height="294"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level Complete!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EBX-fw-bmn">
-                                        <rect key="frame" x="236.66666666666669" y="50" width="135" height="20"/>
-                                        <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="20"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You earned:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1UT-Pu-4f0">
-                                        <rect key="frame" x="254.66666666666669" y="80" width="99" height="20"/>
-                                        <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="20"/>
+                                        <rect key="frame" x="236.66666666666669" y="20" width="135" height="22.333333333333329"/>
+                                        <fontDescription key="fontDescription" name=".SFUI-Regular" family=".AppleSystemUIFont" pointSize="20"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7b-6I-pRX">
-                                        <rect key="frame" x="154" y="110" width="300" height="0.0"/>
+                                        <rect key="frame" x="104" y="72.333333333333343" width="400" height="0.0"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="KGa-91-Yki"/>
+                                            <constraint firstAttribute="width" constant="400" id="KGa-91-Yki"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="20"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1921,15 +1918,13 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="r7b-6I-pRX" firstAttribute="top" secondItem="1UT-Pu-4f0" secondAttribute="bottom" constant="10" id="2gO-pv-m2s"/>
                                     <constraint firstAttribute="width" constant="600" id="6aK-9I-0gk"/>
                                     <constraint firstItem="rU5-NV-E5l" firstAttribute="leading" secondItem="99h-Y4-TJR" secondAttribute="leading" constant="60" id="CjO-7y-lMo"/>
                                     <constraint firstItem="r7b-6I-pRX" firstAttribute="centerX" secondItem="99h-Y4-TJR" secondAttribute="centerX" id="GNS-7y-QS0"/>
                                     <constraint firstItem="EBX-fw-bmn" firstAttribute="centerX" secondItem="99h-Y4-TJR" secondAttribute="centerX" id="Khw-Ww-2Qp"/>
-                                    <constraint firstItem="EBX-fw-bmn" firstAttribute="top" secondItem="99h-Y4-TJR" secondAttribute="top" constant="50" id="NM1-aG-mZj"/>
-                                    <constraint firstItem="1UT-Pu-4f0" firstAttribute="top" secondItem="EBX-fw-bmn" secondAttribute="bottom" constant="10" id="dLf-5J-Jbk"/>
+                                    <constraint firstItem="EBX-fw-bmn" firstAttribute="top" secondItem="99h-Y4-TJR" secondAttribute="top" constant="20" id="NM1-aG-mZj"/>
                                     <constraint firstAttribute="trailing" secondItem="ggn-oN-m2f" secondAttribute="trailing" constant="60" id="iIi-w0-a27"/>
-                                    <constraint firstItem="1UT-Pu-4f0" firstAttribute="centerX" secondItem="99h-Y4-TJR" secondAttribute="centerX" id="omN-Rh-Gvz"/>
+                                    <constraint firstItem="r7b-6I-pRX" firstAttribute="top" secondItem="EBX-fw-bmn" secondAttribute="bottom" constant="30" id="pSI-b7-gpE"/>
                                     <constraint firstAttribute="height" constant="350" id="rRH-p6-8Tl"/>
                                     <constraint firstAttribute="bottom" secondItem="ggn-oN-m2f" secondAttribute="bottom" constant="50" id="tug-1G-qfw"/>
                                     <constraint firstAttribute="bottom" secondItem="rU5-NV-E5l" secondAttribute="bottom" constant="50" id="uUq-N7-Zsg"/>
@@ -1982,6 +1977,7 @@
                     <connections>
                         <outlet property="bgView" destination="99h-Y4-TJR" id="IKs-Bd-Pe6"/>
                         <outlet property="earnLabel" destination="r7b-6I-pRX" id="6UU-nB-MWl"/>
+                        <outlet property="lvlCompleteLabel" destination="EBX-fw-bmn" id="0Ps-ZC-gxv"/>
                         <outlet property="menuButton" destination="rU5-NV-E5l" id="72v-91-9IC"/>
                         <outlet property="nextLevelButton" destination="ggn-oN-m2f" id="5Zj-nR-6Ue"/>
                     </connections>
